--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Malika's Portfolio</title>
+    <title>Malika's Art Work</title>
   </head>
   <body>
     <div id="root"></div>
