--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content=" Malika Riaz is a visual artist. She specializes in miniature painting and artwork. artbyMalika.com is a portfolio website that displays art work done by Malika Riaz"/>
     <title>Malika's Art Work</title>
   </head>
   <body>
